--- a/films.html
+++ b/films.html
@@ -202,7 +202,7 @@
     </div>
 
     <footer>
-        <div class="fl_l">&copy; 2016 <a href="https://vk.com/chamomile">Барцевич Роман</a></div>
+        <div class="fl_l">&copy; 2016-2021 <a href="https://relzon.com">Mr. Relzon</a></div>
         <div class="fl_r">Сделано руками и... головой :)</div>
     </footer>
 
