--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
             <img src="images/content/astroboy.png" alt="" width="280" height="180" style="float:right; margin: 10px 0 10px 20px;border:0">
             <p>
-                <b>Аниме</b> (от англ. <i><b>animation</b> — <b>анимация</b></i>) японская анимация. 
+                <b>Аниме</b> (от англ. <i><b>animation</b> — <b>анимация</b></i>) японская анимация.
                 В отличие от мультфильмов других стран, предназначенных в основном для просмотра
                 детьми, большая часть выпускаемого аниме рассчитана на
                 <i>подростковую и взрослую аудитории</i>, и во многом за счёт этого имеет
@@ -164,7 +164,7 @@
     </div>
 
     <footer>
-        <div class="fl_l">&copy; 2016 <a href="https://vk.com/chamomile">Барцевич Роман</a></div>
+        <div class="fl_l">&copy; 2016-2021 <a href="https://relzon.com">Mr. Relzon</a></div>
         <div class="fl_r">Сделано руками и... головой :)</div>
     </footer>
 
