--- a/articles.html
+++ b/articles.html
@@ -7,14 +7,13 @@
     <title>WebAnime | Cтатьи</title>
     <link rel="shortcut icon" href="favicon.ico">
     <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="css/upScrollButton.css">
 </head>
 
 <body>
-    <header>
-        <div class="header_logo">
+    <header @scroll="onScroll" v-cloak>
+        <div :class="logoStyleClass">
             <a href="index.html">
-                <img src="images/logo.png" />
+                <img :src="logoLink" />
             </a>
         </div>
 
@@ -27,6 +26,10 @@
                 <li><a href="manga.html">Манга</a></li>
             </ul>
         </div>
+
+        <transition name="slide-fade">
+            <a v-if="upScrollButtonExistence" @click="upScroll" :id="upScrollButtonId" href="#">{{ upScrollButtonText }}</a>
+        </transition>
     </header>
 
     <div class="page_padding">
@@ -160,23 +163,12 @@
     </div>
 
     <footer>
-        <div class="fl_l">&copy; 2016-2021 <a href="https://relzon.com">Mr. Relzon</a></div>
-        <div class="fl_r">Сделано руками и... головой :)</div>
+        <div class="fl_l">&copy; 2016-{{ new Date().getFullYear() }} <a :href="link">{{ author }}</a></div>
+        <div class="fl_r">{{ slogan }}</div>
     </footer>
 
-    <script src="js/jquery-2.2.3.min.js"></script>
-    <script src="js/jquery.upScrollButton.js"></script>
-    <script>
-        jQuery(document).ready(function () {
-            jQuery("body").upScrollButton(
-                {
-                    upScrollButtonText: "Наверх",
-                    heightForButtonAppear: 20,
-                    scrollTopTime: 1500
-                }
-            );
-        });
-    </script>
+    <script src="js/vue-3.1.5.min.js"></script>
+    <script src="js/vue.webAnimeApp.js"></script>
 </body>
 
 </html>
